# gwhere-catalog

./: BUGS.fr  ChangeLog.fr  INSTALL-FR  Makefile.am  Makefile.in  ProjectHome.md  aclocal.m4  config.h.in  configure  configure.in  gwhere.desktop
doc/: Makefile.in
doc/license/: Makefile.in
doc/man/: Makefile.in  gwhere.1
intl/: Makefile.in
po/: Makefile.in.in  ar.gmo  cs-windows-1250.gmo  cs.gmo  de.gmo  el.gmo  es.gmo  fr.gmo  gwhere.pot  hu.gmo  it.gmo  messages  nl.gmo  pl.gmo  pt.gmo  ru.gmo  sr.gmo
slackware/: Makefile.in
src/: Makefile.am  Makefile.in  gwapplicationmanager.c  gwapplicationmanager.h  gwguimanager.c
src/data/: Makefile.in
src/db/: Makefile.in
src/gui/: Makefile.in  gwmenufile.c  gwmenufilecallback.c  gwmenufilecallback.h  gwnotebookmanagment.c  gwnotebooksearch.c  gwsettingscatalogfile.c  gwsettingsexplorer.c  gwsettingsgeneral.c  gwsettingsgui.c  gwsettingsmail.c  gwsettingssearch.c  gwsettingswindowbox.c  gwwindowboxabout.c  gwwindowboxmail.c
src/plugins/: Makefile.in
src/plugins/catalog/: Makefile.in
src/plugins/catalog/csv/: Makefile.am  Makefile.in
src/plugins/catalog/gwcatalog/: Makefile.am  Makefile.in
src/plugins/descr/: Makefile.am  Makefile.in
src/res/: Makefile.in
src/tools/: Makefile.in
win32/: Makefile.in
