## Process this file with automake to produce Makefile.in

SUBDIRS = slackware doc intl po src win32

ApplicationGnomedir = $(datadir)/applications
ApplicationGnome_DATA = gwhere.desktop

ApplicationKDEdir = $(datadir)/applnk/Applications
ApplicationKDE_DATA = gwhere.desktop

pixdir = $(datadir)/pixmaps
pix_DATA = gwhere.xpm


EXTRA_DIST = ChangeLog.fr \
		BUGS BUGS.fr \
		gwhere.spec.in \
		gwhere.xpm \
		gwhere.desktop
